# rusty_h264

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MEMORY.md  NOTES.md  README.md  TEMPLATE.md
.claude/: settings.json
.github/workflows/: ci.yml
bench/: Cargo.toml  decode_speedtest.sh  make_cabac_corpus.sh  speedtest.sh
bench/src/: clip.rs  main.rs  metrics.rs  reference.rs
crates/rusty_h264/: Cargo.toml
crates/rusty_h264-accel/: Cargo.toml  build.rs
crates/rusty_h264-accel/examples/: kernel_bench.rs  primitive_map.rs
crates/rusty_h264-accel/src/: lib.rs
crates/rusty_h264-cli/: Cargo.toml
crates/rusty_h264-cli/src/: main.rs
crates/rusty_h264-common/: Cargo.toml  build.rs
crates/rusty_h264-common/src/: aligned.rs  bit_reader.rs  bit_writer.rs  cavlc.rs  deblock.rs  inter.rs  lib.rs  nal.rs  predict.rs  prof.rs  transform.rs  types.rs
crates/rusty_h264-decoder/: Cargo.toml
crates/rusty_h264-decoder/examples/: corpus.rs  oracle.rs
crates/rusty_h264-decoder/src/: cabac.rs  cabac_tables.rs  lib.rs  mb16.rs  params.rs
crates/rusty_h264-decoder/tests/: fuzz_no_panic.rs  profile_decode.rs
crates/rusty_h264-encoder/: Cargo.toml
crates/rusty_h264-encoder/examples/: scatter_anatomy.rs  skip_mc_anatomy.rs
crates/rusty_h264-encoder/src/: config.rs  lib.rs  lookahead.rs  mb16.rs  params.rs  rc.rs  slice.rs
crates/rusty_h264-encoder/tests/: profile_encode.rs  satd_asm_compare.rs
crates/rusty_h264/src/: lib.rs
crates/rusty_h264/tests/: roundtrip.rs
docs/: asm-targets.md  benchmarks.md  cabac-decode-plan.md  compression-levers.md  decode-locality-plan.md  decoder-gap-analysis.md  openh264-cavlc.md  openh264-me-mc.md  openh264-transform.md  optimization-roadmap.md  phase4-plan.md  satd-asm-ledger.md  satd-asm-plan.md  x264-structural-port.md
memory/: MEMORY.md  asm-acceleration-pivot.md  asm-campaign-verdict.md  cabac-build.md  decoder-pivot.md  encode-phase-breakdown.md  mc-fullpel-fastpath-win.md  openh264-baseline-build.md  rusty-h264-pure-rust-constraint.md  transform-batching-regresses.md  x264-speed-architecture.md
tests/cabac_data/: cabac_i_tiny.264  cabac_i_tiny_ref.yuv  openh264_cabac_trace.patch
tests/fuzz_seeds/: cabac_b.264  cabac_i16.264  cabac_i4x4.264  cabac_p.264
