[package]
name = "rusty_h264-accel"
version = "0.1.0"
edition = "2021"
description = "Optional hand-tuned x86 asm acceleration (openh264 BSD-2 kernels). NOT forbid(unsafe)."

[build-dependencies]
cc = "1"

[dev-dependencies]
# For the kernel_bench example: compare asm vs our REAL wide-SIMD scalar kernels.
rusty_h264-common = { path = "../rusty_h264-common", version = "0.1.0" }
