[package]
publish = false
name = "rusty_h264-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line encode/decode tools for rusty_h264 (mirrors openh264's codec/console)."

[[bin]]
name = "rusty_h264"
path = "src/main.rs"

[dependencies]
rusty_h264 = { path = "../rusty_h264", version = "0.2.1", default-features = false }
rusty_h264-common = { workspace = true, default-features = false }

[features]
default = ["asm"]
# Build the CLI with openh264 asm acceleration (on by default; the speed path).
# `--no-default-features` builds the pure scalar codec (no nasm required).
asm = ["rusty_h264/asm"]

[lints.rust]
unsafe_code = "forbid"
