[package]
name = "rusty_h264-common"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared primitives for the rusty_h264 pure-Rust H.264 codec: bitstream I/O, Exp-Golomb, NAL/Annex-B, and core types."

[dependencies]
wide = { workspace = true }
# Optional openh264 asm kernels (deblock, …). The unsafe FFI is quarantined inside
# that crate; we call only its safe wrappers, so this crate stays forbid(unsafe).
rusty_h264-accel = { path = "../rusty_h264-accel", optional = true }

[features]
asm = ["dep:rusty_h264-accel"]

[lints.rust]
unsafe_code = "forbid"
