[package]
name = "rusty_h264-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared primitives for the rusty_h264 pure-Rust H.264 codec: bitstream I/O, Exp-Golomb, NAL/Annex-B, and core types."

[dependencies]
wide = { workspace = true }
# Safe [u8] ↔ [u128] view for 16-byte-aligned plane buffers (AlignedBytes), so the
# openh264 spatial asm kernels can load aligned row chunks. No unsafe in this crate.
bytemuck = "1"
# Optional openh264 asm kernels (deblock, …). The unsafe FFI is quarantined inside
# that crate; we call only its safe wrappers, so this crate stays forbid(unsafe).
rusty_h264-accel = { path = "../rusty_h264-accel", version = "0.2.1", optional = true }

[features]
asm = ["dep:rusty_h264-accel"]
# Enable the in-process stage profiler (src/prof.rs). Off by default → zero
# overhead, release byte-identical. Turn on for `profile_decode`-style measurement.
profile = []

# `unsafe_code = "forbid"` is applied as a crate attribute in lib.rs, gated on
# `not(feature = "profile")` — the shipped build forbids unsafe; the profile-only
# measurement build unlocks the `rdtsc` timer (a dev tool, never shipped).
