[package]
name = "rusty_h264-decoder"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pure-Rust H.264 (Constrained Baseline) decoder."

[dependencies]
rusty_h264-common.workspace = true
rusty_h264-accel = { path = "../rusty_h264-accel", optional = true }

[features]
# Pass-through: decode with openh264 asm acceleration. Shared MC/deblock kernels
# live in rusty_h264-common; the decoder also calls the inverse-DCT kernel
# directly. The unsafe FFI stays quarantined in rusty_h264-accel; this crate
# remains forbid(unsafe).
asm = ["dep:rusty_h264-accel", "rusty_h264-common/asm"]

[dev-dependencies]
# Used only by the fuzz test to generate valid seed streams to mutate.
rusty_h264-encoder.workspace = true

[lints.rust]
unsafe_code = "forbid"
