[package]
name = "rusty_h264-decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pure-Rust H.264 decoder (Baseline + B-slices + most of High profile, CAVLC) — bit-exact vs Cisco openh264."

[dependencies]
rusty_h264-common.workspace = true
rusty_h264-accel = { path = "../rusty_h264-accel", version = "0.2.1", optional = true }

[features]
# Pass-through: decode with openh264 asm acceleration. Shared MC/deblock kernels
# live in rusty_h264-common; the decoder also calls the inverse-DCT kernel
# directly. The unsafe FFI stays quarantined in rusty_h264-accel; this crate
# remains forbid(unsafe).
asm = ["dep:rusty_h264-accel", "rusty_h264-common/asm"]
# Enable the in-process decode stage profiler (used by the `profile_decode` test).
profile = ["rusty_h264-common/profile"]

[dev-dependencies]
# Used only by the fuzz test to generate valid seed streams to mutate.
rusty_h264-encoder.workspace = true

[lints.rust]
unsafe_code = "forbid"
