[package]
name = "rusty_h264-encoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pure-Rust H.264 (Constrained Baseline) encoder."

[dependencies]
rusty_h264-common.workspace = true
# Optional hand-tuned asm acceleration (openh264 BSD-2 kernels). The unsafe FFI is
# fully quarantined inside that crate; this crate calls only its safe wrappers, so
# it stays forbid(unsafe) even with `--features asm`.
rusty_h264-accel = { path = "../rusty_h264-accel", version = "0.2.1", optional = true }

[features]
# Enable openh264 asm kernels for the hot paths (DCT/quant/MC/deblock/…). Requires nasm.
asm = ["dep:rusty_h264-accel", "rusty_h264-common/asm"]
# Dev-only stage profiler (see rusty_h264-common::prof) — zero-cost when off.
profile = ["rusty_h264-common/profile"]

[lints.rust]
unsafe_code = "forbid"
