[package]
name = "rusty_h264"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A ground-up, pure-Rust H.264 encoder and decoder — memory-safe, BSD-2, zero C in the default build. Decoder bit-exact vs Cisco h264dec (Baseline + B-slices + most of High profile); encoder bit-exact vs ffmpeg. A Remade With Rust rebuild of openh264."
keywords = ["h264", "avc", "video", "codec", "decoder"]
categories = ["multimedia::video", "multimedia::encoding"]

[dependencies]
rusty_h264-common.workspace = true
rusty_h264-encoder.workspace = true
rusty_h264-decoder.workspace = true

[features]
default = ["asm"]
# openh264 asm acceleration for the encoder + decoder hot kernels (MC, deblock,
# transforms). On by default; build with `--no-default-features` for the pure
# scalar path (no nasm needed).
asm = ["rusty_h264-encoder/asm", "rusty_h264-decoder/asm"]

[lints.rust]
unsafe_code = "forbid"
