[package]
name = "rusty_h264"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A ground-up, pure-Rust H.264 encoder and decoder. Decoder bit-exact vs Cisco openh264 (Baseline + B-slices + most of High profile); encoder bit-exact vs ffmpeg. forbid(unsafe) codec core; optional vendored openh264 SIMD asm (on by default — `--no-default-features` for pure safe Rust). BSD-2."
keywords = ["h264", "avc", "video", "codec", "decoder"]
categories = ["multimedia::video", "multimedia::encoding"]

# docs.rs has no nasm; build the pure-Rust docs so generation never depends on the
# asm toolchain.
[package.metadata.docs.rs]
no-default-features = true

[dependencies]
rusty_h264-common.workspace = true
rusty_h264-encoder.workspace = true
rusty_h264-decoder.workspace = true

[features]
default = ["asm"]
# openh264 asm acceleration for the encoder + decoder hot kernels (MC, deblock,
# transforms). On by default; build with `--no-default-features` for the pure
# scalar path (no nasm needed).
asm = ["rusty_h264-encoder/asm", "rusty_h264-decoder/asm"]

[lints.rust]
unsafe_code = "forbid"
